# webscraper

./: .hgignore  Fetch.hs  LICENSE  Main.hs  Parse.hs  webscraper.cabal
