Name:                webscraper
Version:             0.1
Synopsis:            A simpler web scraper
Homepage:            http://bitbucket.org/fusiongyro/webscraper
License:             BSD3
License-file:        LICENSE
Author:              Daniel Lyons
Maintainer:          fusion@storytotell.org
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable webscraper
  GHC-Options: -O2 -threaded -rtsopts
  -- .hs or .lhs file containing the Main module.
  Main-is: Main.hs
  
  -- Packages needed in order to build this package.
  Build-depends:       
    base >= 4.0 && < 5.0,
    network >= 2.3.0.0 && < 2.4,
    HTTP >= 4000.1.2 && < 4001,
    bytestring >= 0.9.1.10 && < 1.0,
    filepath >= 1.2.0.0 && < 1.3,
    tagsoup >= 0.12.6 && < 0.13,
    parallel-io >= 0.3.2 && < 0.4
        
  